# quickshell

./: CMakeLists.txt
src/: CMakeLists.txt
src/bluetooth/: CMakeLists.txt  adapter.hpp  bluez.hpp  device.hpp
src/core/: CMakeLists.txt  boundcomponent.hpp  clock.hpp  colorquantizer.hpp  common.cpp  common.hpp  desktopentry.cpp  desktopentry.hpp  desktopentrymonitor.hpp  easingcurve.hpp  elapsedtimer.hpp  enginecontext.hpp  export.h  generation.hpp  iconimageprovider.hpp  iconprovider.hpp  imageprovider.hpp  incubator.hpp  instanceinfo.hpp  lazyloader.hpp  logcat.hpp  logging.hpp  logging_p.hpp  logging_qtprivate.hpp  model.hpp  paths.hpp  persistentprops.hpp  platformmenu.hpp  platformmenu_p.hpp  plugin.cpp  plugin.hpp  popupanchor.hpp  processcore.cpp  qmlglobal.cpp  qmlglobal.hpp  qmlplugin.cpp  qmlscreen.hpp  qsintercept.hpp  qsmenu.hpp  qsmenuanchor.hpp  (+15 more)
src/core/test/: CMakeLists.txt
src/dbus/dbusmenu/: CMakeLists.txt  dbus_menu_types.hpp  dbusmenu.cpp  dbusmenu.hpp
src/io/: CMakeLists.txt  process.cpp  process.hpp
src/io/test/: CMakeLists.txt
src/launch/: launch.cpp
src/network/: CMakeLists.txt
src/services/greetd/: CMakeLists.txt
src/services/mpris/: CMakeLists.txt
src/services/notifications/: CMakeLists.txt
src/services/pam/: CMakeLists.txt
src/services/pipewire/: CMakeLists.txt
src/services/polkit/: CMakeLists.txt
src/services/status_notifier/: CMakeLists.txt  host.cpp  item.cpp
src/services/upower/: CMakeLists.txt
src/ui/: CMakeLists.txt  reload_popup.hpp
src/wayland/: CMakeLists.txt  init.cpp  platformmenu.cpp  popupanchor.cpp  popupanchor.hpp
src/wayland/hyprland/: CMakeLists.txt
src/wayland/hyprland/focus_grab/: CMakeLists.txt
src/wayland/hyprland/global_shortcuts/: CMakeLists.txt
src/wayland/hyprland/ipc/: CMakeLists.txt
src/wayland/hyprland/surface/: CMakeLists.txt
src/wayland/idle_inhibit/: CMakeLists.txt
src/wayland/idle_notify/: CMakeLists.txt
src/wayland/screencopy/: CMakeLists.txt
src/wayland/shortcuts_inhibit/: CMakeLists.txt
src/wayland/toplevel_management/: CMakeLists.txt
src/wayland/wlr_layershell/: CMakeLists.txt  shell_integration.hpp  surface.hpp  wlr_layershell.hpp
src/widgets/: CMakeLists.txt  cliprect.hpp  marginwrapper.hpp  wrapper.hpp
src/window/: CMakeLists.txt  floatingwindow.hpp  init.cpp  panelinterface.hpp  popupwindow.cpp  popupwindow.hpp  proxywindow.hpp  windowinterface.hpp
src/window/menu/: platformmenu.cpp  platformmenu.hpp  platformmenu_p.hpp  popupanchor.cpp  popupanchor.hpp  qsmenu.cpp  qsmenu.hpp  qsmenuanchor.hpp
src/window/test/: CMakeLists.txt
src/x11/: CMakeLists.txt  init.cpp
src/x11/i3/: CMakeLists.txt
src/x11/i3/ipc/: CMakeLists.txt
